<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width_min_dialog"
    android:layout_height="wrap_content"
    tools:context=".presentation.tabs.home.homefilters.FilterDialogFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/size_8dp"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hello world" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/size_8dp"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:text="Hello world" />

    <Switch
        android:id="@+id/switchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:checked="true"
        android:text="@string/filters_near"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTextView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:checked="true"
        android:layoutDirection="rtl"
        android:text="@string/filters_offline_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchView" />

    <TextView
        android:id="@+id/additionalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/filters_additional_settings"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalTextView">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/filter_filter_radio_one" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/filter_filter_radio_two" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/filter_filter_radio_three" />

    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:background="@drawable/background_button_cancel"
        android:minHeight="@dimen/size_64dp"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:text="@string/title_cancel"
        android:elevation="@dimen/size_2dp"
        android:textColor="@color/background_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:background="@drawable/background_button_default"
        android:elevation="@dimen/size_2dp"
        android:minHeight="@dimen/size_64dp"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:text="@string/title_apply"
        android:textColor="@color/text_white"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />




</androidx.constraintlayout.widget.ConstraintLayout>